--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <body>
 <div class="container">
-    <img class="logo" src="/mnt/data/Icon.png" alt="FrameLift AI logo">
+    <img class="logo" src="Icon.png" alt="FrameLift AI logo">
 
     <h1>FrameLift AI</h1>
 
