--- a/index.html
+++ b/index.html
@@ -1,111 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FrameLift AI</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f6f3ef;
-            margin: 0;
-            padding: 40px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .container {
-            max-width: 760px;
-            background: white;
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-        }
-
-        .logo {
-            width: 120px;
-            height: auto;
-            border-radius: 18px;
-        }
-
-        h1 {
-            margin-top: 10px;
-            font-size: 38px;
-            font-weight: 700;
-        }
-
-        .description {
-            margin: 20px 0;
-            font-size: 20px;
-            line-height: 1.5;
-            color: #444;
-        }
-
-        .btn {
-            padding: 12px 26px;
-            margin: 12px 10px 0 0;
-            border-radius: 12px;
-            font-size: 18px;
-            cursor: pointer;
-            border: none;
-        }
-
-        .primary {
-            background: #2ec4ff;
-            color: white;
-        }
-
-        a {
-            text-decoration: none;
-            font-size: 18px;
-            color: #4a3aff;
-            margin-right: 24px;
-        }
-
-        footer {
-            margin-top: 40px;
-            font-size: 16px;
-            color: #666;
-        }
-    </style>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>FrameLift AI</title>
+  <style>
+    body{font-family:Arial,Helvetica,sans-serif;background:#f6f3ef;margin:0;padding:40px;display:flex;justify-content:center}
+    .container{max-width:760px;background:white;padding:40px;border-radius:20px;box-shadow:0 8px 20px rgba(0,0,0,0.08)}
+    .logo{width:120px;height:auto;border-radius:12px;display:block}
+    h1{margin:10px 0 0 0;font-size:34px}
+    .description{margin:18px 0;color:#444;font-size:18px}
+    .btn{padding:12px 22px;border-radius:10px;background:#2ec4ff;color:#fff;border:0;cursor:pointer;font-size:16px}
+    a.link{margin-left:16px;color:#4a3aff;text-decoration:none;font-size:16px}
+  </style>
 </head>
-
 <body>
-<div class="container">
-    <img class="logo" src="Icon.png" alt="FrameLift AI logo">
+  <div class="container">
+    <!-- Absolute GitHub Pages URL for the icon (guarantees correct loading) -->
+    <img class="logo" src="https://secondary4432-cyber.github.io/framelift-ai/Icon.png" alt="FrameLift AI logo">
 
     <h1>FrameLift AI</h1>
-
     <p class="description">
-        Trim, prepare and organize short video clips. Connect your TikTok account to send 
-        prepared clips to Draft for review and posting.
+      Trim, prepare and organize short video clips. Connect your TikTok account to send prepared clips to Draft for review and posting.
     </p>
 
-    <button class="btn primary" onclick="loginWithTikTok()">Login with TikTok</button>
-    <a href="upload.html">Go to Upload</a>
-    <a href="FrameLift_Terms_of_Service.html">Terms</a>
-    <a href="FrameLift_Privacy_Policy.html">Privacy</a>
-
-    <footer>
-        If you see any issues, contact <a href="mailto:developer@framelift.ai">developer@framelift.ai</a>
-    </footer>
-</div>
+    <button class="btn" onclick="loginWithTikTok()">Login with TikTok</button>
+    <a class="link" href="upload.html">Go to Upload</a>
+    <a class="link" href="FrameLift_Terms_of_Service.html">Terms</a>
+    <a class="link" href="FrameLift_Privacy_Policy.html">Privacy</a>
+  </div>
 
 <script>
-    const CLIENT_KEY = "YOUR_TIKTOK_CLIENT_KEY";
-    const REDIRECT_URI = "https://secondary4432-cyber.github.io/framelift-ai/upload.html";
-
-    function loginWithTikTok() {
-        const url =
-            "https://www.tiktok.com/auth/authorize/?" +
-            "client_key=" + CLIENT_KEY +
-            "&scope=user.info.basic,video.upload" +
-            "&response_type=code" +
-            "&redirect_uri=" + encodeURIComponent(REDIRECT_URI);
-
-        window.location.href = url;
-    }
+  const CLIENT_KEY = "YOUR_TIKTOK_CLIENT_KEY";
+  const REDIRECT_URI = "https://secondary4432-cyber.github.io/framelift-ai/upload.html";
+  function loginWithTikTok(){
+    const url = "https://www.tiktok.com/v2/auth/authorize/?" +
+      "client_key=" + encodeURIComponent(CLIENT_KEY) +
+      "&response_type=code" +
+      "&scope=user.info.basic,video.upload" +
+      "&redirect_uri=" + encodeURIComponent(REDIRECT_URI);
+    window.location.href = url;
+  }
 </script>
-
 </body>
 </html>
